@@ -29,11 +29,11 @@ public class StringWidgetUtilsTest {
     @Test
     public void getDoubleAnswerValueFromIAnswerDataTest() {
         assertNull(StringWidgetUtils.getIntegerAnswerValueFromIAnswerData(null));
-        assertEquals(new Double(0), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(0)));
-        assertEquals(new Double(-15), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(-15)));
-        assertEquals(new Double(-15.123), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(-15.123)));
-        assertEquals(new Double(15), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(15)));
-        assertEquals(new Double(15.123), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(15.123)));
+        assertEquals(Double.valueOf(0), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(0)));
+        assertEquals(Double.valueOf(-15), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(-15)));
+        assertEquals(Double.valueOf(-15.123), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(-15.123)));
+        assertEquals(Double.valueOf(15), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(15)));
+        assertEquals(Double.valueOf(15.123), StringWidgetUtils.getDoubleAnswerValueFromIAnswerData(new DecimalData(15.123)));
         assertEquals(Integer.valueOf(15), StringWidgetUtils.getIntegerAnswerValueFromIAnswerData(new IntegerData(15)));
         assertEquals(Integer.valueOf(15), StringWidgetUtils.getIntegerAnswerValueFromIAnswerData(new StringData("15")));
         assertNull(StringWidgetUtils.getIntegerAnswerValueFromIAnswerData(new StringData("abc")));
